--- a/theme/commerce_physical.css
+++ b/theme/commerce_physical.css
@@ -1,5 +1,20 @@
 
 .commerce-physical-weight-textfield .form-item {
   display: inline;
-  margin-right: 1em;
+}
+
+.commerce-physical-weight-textfield {
+  padding: 9px 0;
+  margin: 0 0 10px;
+}
+
+.commerce-physical-dimension-form-item {
+  float: left;
+  margin-left: .25em;
+}
+
+.commerce-physical-dimensions-unit-form-item {
+  float: left;
+  margin-top: 1.6em;
+  margin-left: .4em;
 }
